--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Rede Social</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="estilos/estilo.css">
 </head>
 <body>
-    
+    <main>
+        <section id="telefone">
+
+        </section>
+
+        <section id="rede-sociais">
+
+        </section>
+    </main>
 </body>
 </html>
