--- a/index.html
+++ b/index.html
@@ -9,11 +9,28 @@
 <body>
     <main>
         <section id="telefone">
-
+            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
         </section>
 
         <section id="rede-sociais">
-
+            <a href="home.html" target="tela">
+                <img src="imagens/logo-home.jpg" alt="Home">
+            </a>
+            <a href="youtube.html" target="tela">
+                <img src="imagens/logo-youtube.jpg" alt="Youtube">
+            </a>
+            <a href="github.html" target="tela">
+                <img src="imagens/logo-github.jpg" alt="Github">
+            </a>
+            <a href="instagram.html" target="tela">
+                <img src="imagens/logo-instagram.jpg" alt="Instagram">
+            </a>
+            <a href="twitter.html" target="tela">
+                <img src="imagens/logo-twitter.jpg" alt="Twitter">
+            </a>
+            <a href="facebook.html" target="tela">
+                <img src="imagens/logo-facebook.jpg" alt="Facebook">
+            </a>
         </section>
     </main>
 </body>
